gccida/c1/move_movables
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2268:4: error: expected ';' after expression
rtx v37; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2268:5: error: use of undeclared identifier 'v37'
rtx v37; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2271:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2271:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2273:4: error: expected ';' after expression
rtx v42; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2273:5: error: use of undeclared identifier 'v42'
rtx v42; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2274:4: error: expected ';' after expression
rtx v43; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2274:5: error: use of undeclared identifier 'v43'
rtx v43; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2276:4: error: expected ';' after expression
rtx set_dest; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2276:5: error: use of undeclared identifier 'set_dest'
rtx set_dest; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2277:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2281:4: error: expected ';' after expression
rtx v50; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2281:5: error: use of undeclared identifier 'v50'
rtx v50; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2283:4: error: expected ';' after expression
rtx v52; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2283:5: error: use of undeclared identifier 'v52'
rtx v52; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2286:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2286:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2292:4: error: expected ';' after expression
rtx v61; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/loop.c:2292:5: error: use of undeclared identifier 'v61'
rtx v61; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/move_movables/src/obj/loop.o] Error 1
